# pymodular

./: pyproject.toml
tests/: test_pymodular.py
