[tool.poetry]
name = "pymodular"
version = "0.1.0"
description = "This package contain asynchronice modular synthesizer"
authors = ["Adam Shafir <adamshafir@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
